infrastructure/k8s/base/api-namespace-staging.yml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "staging",
    "labels": {
      "name": "staging"
    }
  }
}
