infrastructure/k8s/base/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ~
spec:
  type: NodePort
  selector:
    component: api
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
