infrastructure/k8s/base/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: ~
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  rules:
  - host: ~
    http:
        paths:
          - path: /
            backend:
              serviceName: api-service
              servicePort: 3000
